--- a/src/app/Pages/result/result.component.html
+++ b/src/app/Pages/result/result.component.html
@@ -44,7 +44,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let result of results(); let i = index">
-        <td class="col col-lg-1">{{ i + 1 }}</td>
+        <td class="col-auto">{{ i + 1 }}</td>
         <td>
           <div>
             {{ result.id }}
