--- a/src/app/Pages/client/client.component.html
+++ b/src/app/Pages/client/client.component.html
@@ -34,6 +34,7 @@
     <thead class="table-info">
       <tr>
         <th>#</th>
+        <th>ID</th>
         <th>Client Name</th>
         <th>Contact Person</th>
         <th>Contact #</th>
@@ -41,6 +42,7 @@
         <th>Website</th>
         <th>Agent Name</th>
         <th>Agent Contact #</th>
+        <th>Industry</th>
         <th>Created By</th>
         <th>Action</th>
       </tr>
@@ -48,6 +50,7 @@
     <tbody>
       <tr *ngFor="let item of clients(); let i = index">
         <td class="col-auto">{{ i + 1 }}</td>
+        <td class="col-auto">{{ item.id }}</td>
         <td class="col-auto">
           <div *ngIf="item.isEdit">
             <input
@@ -139,6 +142,20 @@
           </div>
         </td>
         <td class="col-auto">
+          @if(item.isEdit){
+          <select
+            class="form-select form-select-sm"
+            id="industriesid"
+            [(ngModel)]="item.industriesid"
+          >
+            @for (item of industries(); track $index) {
+            <option [value]="item.id">{{ item.name }}</option>
+            }
+          </select>
+          }@else { {{ getIndustriesName(item.industriesid) }}
+          }
+        </td>
+        <td class="col-auto">
           <div>{{ item.createdby }}</div>
         </td>
         <td class="col-auto" style="width: calc(7.33% + 4.17%)">
@@ -154,7 +171,8 @@
                   item.address,
                   item.website,
                   item.agentname,
-                  item.agentnumber
+                  item.agentnumber,
+                  item.industriesid
                 );
                 item.isEdit = false
               "
@@ -290,6 +308,21 @@
                   formControlName="agentnumber"
                 />
               </div>
+              <div class="col-12">
+                <label for="industries" class="form-label">Industries</label>
+                <select
+                  id="industries"
+                  formControlName="industriesid"
+                  class="form-select form-select-sm"
+                >
+                  <option disabled selected value="null">
+                    -----Select-----
+                  </option>
+                  @for (item of industries(); track item.id) {
+                  <option [value]="item.id">{{ item.name }}</option>
+                  }
+                </select>
+              </div>
             </div>
           </form>
         </div>
@@ -314,7 +347,8 @@
                 formSaveClient.value.address,
                 formSaveClient.value.website,
                 formSaveClient.value.agentname,
-                formSaveClient.value.agentnumber
+                formSaveClient.value.agentnumber,
+                formSaveClient.value.industriesid
               )
             "
             [disabled]="formSaveClient.invalid"
