--- a/src/app/Pages/location/location.component.html
+++ b/src/app/Pages/location/location.component.html
@@ -49,7 +49,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let location of locations(); let i = index">
-        <td class="col col-lg-1">{{ i + 1 }}</td>
+        <td class="col-auto">{{ i + 1 }}</td>
         <td>
           <div>
             {{ location.id }}
