--- a/src/app/Pages/title/title.component.html
+++ b/src/app/Pages/title/title.component.html
@@ -44,7 +44,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let title of titles(); let i = index">
-        <td class="col col-lg-1">{{ i + 1 }}</td>
+        <td class="col-auto">{{ i + 1 }}</td>
         <td>
           <div>
             {{ title.id }}
