added training report

--- a/src/app/Pages/alltrainings/alltrainings.component.html
+++ b/src/app/Pages/alltrainings/alltrainings.component.html
@@ -176,19 +176,19 @@
         </div>
         <div class="legend-item fs-7">
           <span class="legend-box legend-red"></span>
-          <span>New</span>
+          <span>Tentative</span>
         </div>
         <div class="legend-item fs-7">
           <span class="legend-box legend-yellow"></span>
-          <span>Open</span>
+          <span>Planned</span>
         </div>
         <div class="legend-item fs-7">
           <span class="legend-box legend-dblue"></span>
-          <span>Plan</span>
+          <span>Conducted</span>
         </div>
         <div class="legend-item fs-7">
           <span class="legend-box legend-green"></span>
-          <span>InProgress</span>
+          <span>Billed</span>
         </div>
         <div class="legend-item fs-7">
           <span class="legend-box"></span>
