--- a/src/app/Pages/trainingsreport/trainingsreport.component.html
+++ b/src/app/Pages/trainingsreport/trainingsreport.component.html
@@ -15,7 +15,206 @@
     </div>
   </div>
   <hr />
+  <app-toast></app-toast>
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12">
+      <div class="card mb-4">
+        <div class="card-body bg-primary bg-opacity-75 text-white">
+          <h5 class="card-title">Training Report All</h5>
+          <form [formGroup]="formAll">
+            <div class="row my-2">
+              <div class="col-auto">
+                <div class="form-floating mb-3">
+                  <input
+                    type="date"
+                    class="form-control form-control-sm border border-primary border-3"
+                    id="floatingAllFrom"
+                    formControlName="startDate"
+                  />
+                  <label for="floatingAllFrom">From</label>
+                </div>
+              </div>
+              <div class="col-auto">
+                <div class="form-floating">
+                  <input
+                    type="date"
+                    class="form-control form-control-sm border border-primary border-3"
+                    id="floatingAllTo"
+                    formControlName="endDate"
+                  />
+                  <label for="floatingAllTo">To</label>
+                </div>
+              </div>
+              <div class="col-auto">
+                <div class="form-floating">
+                  <select
+                    class="form-select form-select-sm border border-primary border-3"
+                    id="floatingAllSelectcourse"
+                    formControlName="courseid"
+                  >
+                    <option disabled value="null">-----Select-----</option>
+                    @for (item of courses(); track $index) {
+                    <option [value]="item.id">{{ item.name }}</option>
+                    }
+                  </select>
+                  <label for="floatingAllSelectcourse">Course</label>
+                </div>
+              </div>
+              <div class="col-auto">
+                <div class="form-floating">
+                  <select
+                    class="form-select form-select-sm border border-primary border-3"
+                    id="floatingAllSelectcategory"
+                    formControlName="categoryid"
+                  >
+                    <option disabled value="null">-----Select-----</option>
+                    @for (item of categories(); track $index) {
+                    <option [value]="item.id">{{ item.name }}</option>
+                    }
+                  </select>
+                  <label for="floatingAllSelectcategory">Category</label>
+                </div>
+              </div>
+              <div class="col-auto">
+                <div class="form-floating">
+                  <select
+                    class="form-select form-select-sm border border-primary border-3"
+                    id="floatingAllSelectTitle"
+                    formControlName="titleid"
+                  >
+                    <option disabled value="null">-----Select-----</option>
+                    @for (item of titles(); track $index) {
+                    <option [value]="item.id">{{ item.name }}</option>
+                    }
+                  </select>
+                  <label for="floatingAllSelectTitle">Program</label>
+                </div>
+              </div>
+              <div class="col-auto">
+                <div class="form-floating">
+                  <select
+                    class="form-select form-select-sm border border-primary border-3"
+                    id="floatingAllSelectLocation"
+                    formControlName="locationid"
+                  >
+                    <option disabled value="null">-----Select-----</option>
+                    @for (item of locations(); track $index) {
+                    <option [value]="item.id">{{ item.name }}</option>
+                    }
+                  </select>
+                  <label for="floatingAllSelectLocation">Locations</label>
+                </div>
+              </div>
+              <div class="col-auto">
+                <div class="form-floating">
+                  <select
+                    class="form-select form-select-sm border border-primary border-3"
+                    id="floatingAllSelectSources"
+                    formControlName="source"
+                  >
+                    <option disabled value="null">-----Select-----</option>
+                    @for (item of sources(); track $index) {
+                    <option [value]="item">{{ item }}</option>
+                    }
+                  </select>
+                  <label for="floatingAllSelectSources">Source</label>
+                </div>
+              </div>
+              <div class="col-auto">
+                <div class="form-floating">
+                  <select
+                    class="form-select form-select-sm border border-primary border-3"
+                    id="floatingAllSelectStatus"
+                    formControlName="status"
+                  >
+                    <option disabled value="null">-----Select-----</option>
+                    @for (item of statuses(); track $index) {
+                    <option [value]="item">{{ item }}</option>
+                    }
+                  </select>
+                  <label for="floatingAllSelectStatus">Status</label>
+                </div>
+              </div>
+              <div class="col-auto">
+                <div class="form-floating">
+                  <select
+                    class="form-select form-select-sm border border-primary border-3"
+                    id="floatingAllSelectClient"
+                    formControlName="clientid"
+                  >
+                    <option disabled value="null">-----Select-----</option>
+                    @for (item of clients(); track $index) {
+                    <option [value]="item.id">{{ item.name }}</option>
+                    }
+                  </select>
+                  <label for="floatingAllSelectClient">Sponsor</label>
+                </div>
+              </div>
 
+              <div class="col-auto">
+                <div class="form-floating">
+                  <select
+                    class="form-select form-select-sm border border-primary border-3"
+                    id="floatingSelectContractor"
+                    formControlName="contractorid"
+                  >
+                    <option disabled value="null">-----Select-----</option>
+                    @for (item of filteredContractors(); track $index) {
+                    <option [value]="item.id">{{ item.name }}</option>
+                    }
+                  </select>
+                  <label for="floatingSelectVehicle">Contractors</label>
+                </div>
+              </div>
+              <div class="col-auto">
+                <div class="form-floating">
+                  <select
+                    class="form-select form-select-sm border border-primary border-3"
+                    id="floatingSelectTrainer"
+                    formControlName="trainerid"
+                  >
+                    <option disabled value="null">-----Select-----</option>
+                    @for (item of trainers(); track $index) {
+                    <option [value]="item.id">{{ item.name }}</option>
+                    }
+                  </select>
+                  <label for="floatingSelectTrainer">Trainers</label>
+                </div>
+              </div>
+              <div class="col-auto">
+                @if (apiCallInProgress()) {
+                <button class="btn btn-primary" type="button" disabled>
+                  <span
+                    class="spinner-grow spinner-grow-sm"
+                    aria-hidden="true"
+                  ></span>
+                  <span role="status"> Loading...</span>
+                </button>
+                }@else {
+                <button
+                  type="submit"
+                  class="btn btn-primary"
+                  (click)="getReportALL()"
+                >
+                  <i class="fa-solid fa-file-excel"></i>
+                  Export
+                </button>
+
+                <button
+                  type="button"
+                  class="btn btn-secondary mx-1"
+                  (click)="resetForm()"
+                >
+                  <i class="fa-solid fa-broom"></i> Reset
+                </button>
+                }
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="row">
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="card mb-4">
