--- a/src/app/Pages/trainingsreport/trainingsreport.component.html
+++ b/src/app/Pages/trainingsreport/trainingsreport.component.html
@@ -163,7 +163,7 @@
                     <option [value]="item.id">{{ item.name }}</option>
                     }
                   </select>
-                  <label for="floatingSelectVehicle">Contractors</label>
+                  <label for="floatingSelectContractor">Contractors</label>
                 </div>
               </div>
               <div class="col-auto">
@@ -217,24 +217,65 @@
   </div>
   <div class="row">
     <div class="col-lg-3 col-md-6 col-sm-12">
-      <div class="card mb-4">
-        <div class="card-body bg-primary bg-opacity-75 text-white">
-          <h5 class="card-title">Training Report</h5>
-          <p class="card-text">
-            <select class="form-select form-select-sm" id="driverexpiry2">
-              <option selected>-----Select-----</option>
-            </select>
-          </p>
-          <p class="card-text">
-            <button class="btn btn-primary" title="Export">
-              <i class="fa-solid fa-file-excel"></i> Export
-            </button>
-            <button class="btn btn-secondary ms-1" title="Reset Filter">
-              <i class="fa-solid fa-broom"></i> Reset
-            </button>
-          </p>
+      <form [formGroup]="formFinance">
+        <div class="card mb-4">
+          <div class="card-body bg-primary bg-opacity-75 text-white">
+            <h5 class="card-title">Financial Report By Month</h5>
+            <div class="card-text">
+              <div class="row g-3 align-items-center">
+                <div class="col-auto">
+                  <div class="form-floating">
+                    <select
+                      class="form-select form-select-sm border border-primary border-3"
+                      id="floatingAllSelectmonth"
+                      formControlName="month"
+                    >
+                      <option disabled value="null">-----Select-----</option>
+                      @for (item of months(); track $index) {
+                      <option [value]="item.id">{{ item.name }}</option>
+                      }
+                    </select>
+                    <label for="floatingAllSelectmonth">Month</label>
+                  </div>
+                </div>
+                <div class="col-auto">
+                  <div class="form-floating">
+                    <select
+                      class="form-select form-select-sm border border-primary border-3"
+                      id="floatingAllSelectyear"
+                      formControlName="year"
+                    >
+                      <option disabled value="null">-----Select-----</option>
+                      @for (item of years(); track $index) {
+                      <option [value]="item">{{ item }}</option>
+                      }
+                    </select>
+                    <label for="floatingAllSelectyear">Year</label>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <p class="card-text mt-1">
+              <button
+                class="btn btn-primary"
+                type="submit"
+                title="Export Financial Report"
+                (click)="exportFinance()"
+                [disabled]="formFinance.invalid"
+              >
+                <i class="fa-solid fa-file-excel"></i> Export
+              </button>
+              <button
+                class="btn btn-secondary ms-1"
+                (click)="resetForm()"
+                title="Reset Filter"
+              >
+                <i class="fa-solid fa-broom"></i> Reset
+              </button>
+            </p>
+          </div>
         </div>
-      </div>
+      </form>
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="card mb-4">
