added biller and trainer column in training

--- a/src/app/Pages/addtraining/addtraining.component.html
+++ b/src/app/Pages/addtraining/addtraining.component.html
@@ -360,14 +360,16 @@
             }
           </select>
         </div>
-        <label for="venue" class="col-sm-1 col-form-label mt-2">Venue:</label>
+        <label for="venue" class="col-sm-1 col-form-label mt-2"
+          >Venue & Expected Trainees:</label
+        >
         <div class="col-lg-3 col-md-5 col-sm-11 mt-2">
           <input
             id="venue"
             type="text"
             class="form-control form-control-sm"
             formControlName="venue"
-            placeholder="Training Room"
+            placeholder="Training Room with 8 Persons"
           />
         </div>
         <label for="locationid" class="col-sm-1 col-form-label mt-2"
