--- a/src/app/Widgets/supercategory/supercategory.component.html
+++ b/src/app/Widgets/supercategory/supercategory.component.html
@@ -143,26 +143,26 @@
         <form [formGroup]="formSuperCategory">
           <div class="row">
             <div class="col-12">
-              <label for="mastername" class="form-label required">Name</label>
+              <label for="supername" class="form-label required">Name</label>
               <input
                 type="text"
-                name="mastername"
+                name="supername"
                 class="form-control form-control-sm"
-                id="mastername"
+                id="supername"
                 placeholder="U.E.P"
                 formControlName="name"
                 required
               />
             </div>
             <div class="col-12">
-              <label for="masterdescription" class="form-label mt-1"
+              <label for="superdescription" class="form-label mt-1"
                 >Description</label
               >
               <input
                 type="text"
-                name="masterdescription"
+                name="superdescription"
                 class="form-control form-control-sm"
-                id="masterdescription"
+                id="superdescription"
                 placeholder="United Energy Pakistan Limited"
                 formControlName="description"
               />
