--- a/src/app/Pages/trainingdetail/trainingdetail.component.html
+++ b/src/app/Pages/trainingdetail/trainingdetail.component.html
@@ -474,7 +474,7 @@
               </select>
             </div>
             <label for="venue" class="col-sm-1 col-form-label mt-2"
-              >Venue:</label
+              >Venue & Expected Trainees:</label
             >
             <div class="col-lg-3 col-md-5 col-sm-11 mt-2">
               <input
@@ -482,7 +482,7 @@
                 type="text"
                 class="form-control form-control-sm"
                 formControlName="venue"
-                placeholder="Training Room"
+                placeholder="Training Room with 8 Persons"
               />
             </div>
             <label for="locationid" class="col-sm-1 col-form-label mt-2"
