Fixed certificates and added training auto field data

--- a/src/app/Pages/addtraining/addtraining.component.html
+++ b/src/app/Pages/addtraining/addtraining.component.html
@@ -211,12 +211,12 @@
             placeholder="ZB00258"
           />
         </div>
-        <label for="invoicenumber" class="col-sm-1 col-form-label mt-2"
+        <label for="invoicedate" class="col-sm-1 col-form-label mt-2"
           >Invoice Date:</label
         >
         <div class="col-lg-3 col-md-5 col-sm-11 mt-2">
           <input
-            id="invoicenumber"
+            id="invoicedate"
             type="date"
             class="form-control form-control-sm"
             formControlName="invoicedate"
