--- a/src/app/Pages/assessmentsreport/assessmentsreport.component.html
+++ b/src/app/Pages/assessmentsreport/assessmentsreport.component.html
@@ -364,23 +364,23 @@
                 (click)="downloadSessionReport()"
                 title="Download PDF"
               >
-                <i class="fa-solid fa-file-pdf me-1"></i>Generate Certificates
+                <i class="fa-solid fa-file-pdf me-1"></i>Certificates
               </button>
               <!-- <button
                 class="btn btn-warning ms-1"
                 type="button"
-                (click)="downloadDriverReport()"
-                title="Download PDF"
+                (click)="downloadWordSummery()"
+                title="Download Driver Summery"
               >
-                <i class="fa-solid fa-file-pdf me-1"></i>Generate Card
+                <i class="fa-solid fa-file-word me-1"></i>Summery
               </button> -->
               <button
                 class="btn btn-warning ms-1"
                 type="button"
                 (click)="downloadWordReport()"
-                title="Download Word"
+                title="Download Driver Cards"
               >
-                <i class="fa-solid fa-file-word me-1"></i>Generate Cards
+                <i class="fa-solid fa-file-word me-1"></i>Cards
               </button>
               }
             </p>
