--- a/src/app/Pages/assessmentsreport/assessmentsreport.component.html
+++ b/src/app/Pages/assessmentsreport/assessmentsreport.component.html
@@ -414,7 +414,7 @@
           </td>
           <td>
             <div>
-              {{ item.sessioname }}
+              {{ item.name }}
             </div>
           </td>
           <td>
