--- a/src/app/Pages/addassessment/addassessment.component.html
+++ b/src/app/Pages/addassessment/addassessment.component.html
@@ -546,7 +546,78 @@
     </div>
     } @if (!isLoading()) {
     <div class="row">
-      <div class="col-12">
+      <div class="col-lg-8 col-md-8 col-sm-12">
+        @if (selectedForm()==16001) {
+        <div class="legend-container">
+          Marking Guide:
+          <div class="legend-item fs-7">
+            <span class="legend-box legend-darkred">0</span>
+            <span>Unsatisfactory</span>
+          </div>
+          <div class="legend-item fs-7">
+            <span class="legend-box legend-darkyellow">1</span>
+            <span>Sometimes</span>
+          </div>
+          <div class="legend-item fs-7">
+            <span class="legend-box legend-darkblue">2</span>
+            <span>Frequently</span>
+          </div>
+          <div class="legend-item fs-7">
+            <span class="legend-box legend-darkgreen">3</span>
+            <span>Consistently</span>
+          </div>
+        </div>
+        }@else if (selectedForm()==16002) {
+        <div class="legend-container">
+          Scoring Interp:
+          <div class="legend-item fs-7">
+            <span class="legend-box legend-darkred">1</span>
+            <span>Poor</span>
+          </div>
+          <div class="legend-item fs-7">
+            <span class="legend-box legend-darkyellow">2</span>
+            <span>Lacking</span>
+          </div>
+          <div class="legend-item fs-7">
+            <span class="legend-box legend-darkmegenta">3</span>
+            <span>Satisfactory</span>
+          </div>
+          <div class="legend-item fs-7">
+            <span class="legend-box legend-darkblue">4</span>
+            <span>Good</span>
+          </div>
+          <div class="legend-item fs-7">
+            <span class="legend-box legend-darkgreen">5</span>
+            <span>Excellent</span>
+          </div>
+        </div>
+        } @else {
+        <div class="legend-container">
+          Key to Grades:
+          <div class="legend-item fs-7">
+            <span class="legend-box legend-darkgreen">1</span>
+            <span>Excellent</span>
+          </div>
+          <div class="legend-item fs-7">
+            <span class="legend-box legend-darkblue">2</span>
+            <span>Good</span>
+          </div>
+          <div class="legend-item fs-7">
+            <span class="legend-box legend-darkmegenta">3</span>
+            <span>Satisfactory</span>
+          </div>
+          <div class="legend-item fs-7">
+            <span class="legend-box legend-darkyellow">4</span>
+            <span>Lacking</span>
+          </div>
+          <div class="legend-item fs-7">
+            <span class="legend-box legend-darkred">5</span>
+            <span>Poor</span>
+          </div>
+        </div>
+        }
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-12">
         @if (!showInitial()) {
         <button
           (click)="toggleInitial()"
@@ -693,7 +764,12 @@
                                         class="score-input"
                                         name="initial"
                                         formControlName="scoreInitial"
-                                        (input)="restrictToSingleDigit($event)"
+                                        (input)="
+                                          restrictToSingleDigit(
+                                            $event,
+                                            activity.get('scoreInitial')
+                                          )
+                                        "
                                       />
                                     </td>
                                     } @if (showMiddle()) {
@@ -706,7 +782,12 @@
                                         class="score-input"
                                         name="middle"
                                         formControlName="scoreMiddle"
-                                        (input)="restrictToSingleDigit($event)"
+                                        (input)="
+                                          restrictToSingleDigit(
+                                            $event,
+                                            activity.get('scoreMiddle')
+                                          )
+                                        "
                                       />
                                     </td>
                                     }
@@ -714,13 +795,17 @@
                                     <td style="width: 80px">
                                       <input
                                         type="number"
-                                        min="0"
-                                        max="5"
                                         maxlength="1"
+                                        pattern="[0-5]"
                                         class="score-input"
                                         name="final"
                                         formControlName="scoreFinal"
-                                        (input)="restrictToSingleDigit($event)"
+                                        (input)="
+                                          restrictToSingleDigit(
+                                            $event,
+                                            activity.get('scoreFinal')
+                                          )
+                                        "
                                       />
                                     </td>
                                   </tr>
